added types root

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,7 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*"]
 }
