render.yaml file updated

--- a/server/render.yaml
+++ b/server/render.yaml
@@ -1,7 +1,7 @@
 # render.yaml
 services:
   - type: web
-    name: secure-auth-api
+    name: secure-auth-server
     env: node
     plan: free
     rootDir: server
