--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,8 +11,7 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
-    "typeRoots": ["./node_modules/@types"],
-    "types": ["node", "express", "cors", "cookie-parser", "jsonwebtoken"]
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*"]
 }
