--- a/server/render.yaml
+++ b/server/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     plan: free
     rootDir: server
-    buildCommand: yarn install && yarn build
+    buildCommand: yarn build
     startCommand: yarn start
     envVars:
       - key: NODE_ENV
